syntax = "proto3";

option go_package = "github.com/geoffrey-anto/golang-microservice-apis/logger";

service Logger {
  rpc SaveLog(LogSaveRequest) returns (LogSaveRespone) {}
}

message LogSaveRequest {
  string id = 1;
  string log = 2;
  string time = 3;
}

message LogSaveRespone {
  bool success = 1;
}
